--- a/Prueba.html
+++ b/Prueba.html
@@ -8,7 +8,7 @@
     {% include 'navbar.html' %}
 
     {% block content %}
-        replace me con el conflicto
+        replace me sin con el conflicto
     {% endblock %}
 </body>
 
