--- a/Prueba.html
+++ b/Prueba.html
@@ -8,7 +8,7 @@
     {% include 'navbar.html' %}
 
     {% block content %}
-        replaca me sin con el conflicto
+        replaca me
     {% endblock %}
 </body>
 
